src/test/snapshots/graph_dag__test__dag_to_graph__dag_to_graph_1.snap
---
source: src/test/dag_to_graph.rs
expression: "dag_to_text(\"A -> B -> C\\nA -> D -> C\").unwrap()"
---
┌───────┐ 
│   A   │ 
└┬────┬─┘ 
┌▽──┐┌▽──┐
│ B ││ D │
└┬──┘└┬──┘
┌▽────▽─┐ 
│   C   │ 
└───────┘
