src/test/snapshots/graph_dag__test__dag_to_graph__dag_to_graph_3.snap
---
source: src/test/dag_to_graph.rs
expression: "dag_to_text(\"A -> B -> C\\nA -> D -> C\\nB -> D\\nE\").unwrap()"
---
┌─────┐┌─┐
│  A  ││E│
└┬───┬┘└─┘
┌▽──┐│    
│ B ││    
└┬─┬┘│    
 │┌▽─▽┐   
 ││ D │   
 │└┬──┘   
┌▽─▽┐     
│ C │     
└───┘
