src/test/snapshots/graph_dag__test__dag_to_graph__dag_to_graph_4.snap
---
source: src/test/dag_to_graph.rs
expression: "dag_to_text(\"A -> C\\nA -> D -> C\\nB -> D\\nE -> C\")"
---
┌───┐┌─┐┌─┐
│A  ││B││E│
└┬─┬┘└┬┘└┬┘
 │┌▽──▽┐ │ 
 ││D   │ │ 
 │└┬───┘ │ 
┌▽─▽─────▽┐
│C        │
└─────────┘
